2010-02-02  H.J. Lu  <hongjiu.lu@intel.com>

	* readelf.c (get_note_type): Handle NT_X86_XSTATE.

2010-02-01  Nathan Sidwell  <nathan@codesourcery.com>

	* objcopy.c (copy_object): Set SEC_LINKER_CREATED when adding
	sections.

2010-01-28  Nick Clifton  <nickc@redhat.com>

	PR 11225
	* objdump.c (only): Replace with linked list.
	(only_size, only_used): Replace with only_list.
	(process_section_p): Set seen field on matches sections.
	(add_only): New function.
	(free_only_list): New function.
	(disassemble_section): Check only_list.
	(main): Use add_only and free_only_list.

2010-01-26  Tristan Gingold  <gingold@adacore.com>

	* Makefile.am (bin2c): Add libintl dependance and library.
	* Makefile.in: Regenerate.

2010-01-21  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* readelf.c (get_machine_flags): Handle EF_S390_HIGH_GPRS.

2010-01-19  Ian Lance Taylor  <iant@google.com>

	* objcopy.c (copy_main): Rewrite OPTION_ADD_SECTION code to work
	with non-ordinary files like /dev/null.

2010-01-19  Daisuke Hatayama  <d.hatayama@jp.fujitsu.com>
	    Alan Modra <amodra@gmail.com>

        * readelf.c (process_file_header): Handle e_phnum extension.

2010-01-14  Tristan Gingold  <gingold@adacore.com>

	* dwarf.c (get_AT_name): Handle DW_AT_use_GNAT_descriptive_type
	and DW_AT_GNAT_descriptive_type.

2010-01-13  Tristan Gingold  <gingold@adacore.com>

	* ar.c (main): Use lbasename.
	(normalize): Ditto.
	* objdump.c (update_source_path): Ditto.

2010-01-12  Tristan Gingold  <gingold@adacore.com>

	* makefile.vms (CFLAGS): Turns warnings into informational messages.

2010-01-11  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/11146
	* NEWS: Mention --dyn-syms for readelf.

	* readelf.c (do_dyn_syms): New.
	(OPTION_DYN_SYMS): Likewise.
	(options): Add "dyn-syms".
	(usage): Add --dyn-syms.
	(parse_args): Handle OPTION_DYN_SYMS.
	(process_symbol_table): Handle do_dyn_syms.
	(process_object): Likewise.
	(process_archive): Likewise.
